fix overlap label issue in Menu tab, still need to change sizing for smaller screens

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,12 +1,3 @@
-/* #backgroundMenu {
-    display: flex;
-    background-color: var(--section1-color);
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 64px);
-    color: bisque;
-} */
-
 #menu-title {
     font-size: 48px;
     font-weight: bold;
@@ -19,7 +10,7 @@
     display: flex;
     gap: 30px;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
     border: 1px dashed bisque;
     padding: 30px;
@@ -27,6 +18,9 @@
 }
 
 .menu-card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     width: 200px;
 }
 
@@ -43,9 +37,9 @@
     transition: opacity 0.2s;
 }
 
-.menu-card p {
+.menu-label {
     color: blanchedalmond;
     font-size: 16px;
     text-align: center;
-    /* text-align-last: center; */
+    text-align-last: center;
 }
